--- a/package.json
+++ b/package.json
@@ -17,15 +17,20 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@kolking/react-native-rating": "^1.4.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^3.5.2",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.46",
     "expo-blur": "~14.0.3",
+    "expo-checkbox": "^4.0.1",
     "expo-clipboard": "^7.0.1",
     "expo-constants": "~17.0.8",
     "expo-document-picker": "~13.0.3",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
     "expo-location": "^18.0.10",
@@ -41,10 +46,13 @@
     "react-native-document-picker": "^9.3.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0",
+    "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-paper": "^5.13.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
