--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@expo/vector-icons": "^14.0.2",
     "@kolking/react-native-rating": "^1.4.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "axios": "^1.8.4",
     "expo": "~52.0.46",
     "expo-blur": "~14.0.3",
     "expo-checkbox": "^4.0.1",
