--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-checkbox": "^4.0.1",
     "expo-clipboard": "^7.0.1",
     "expo-constants": "~17.0.8",
+    "expo-contacts": "~14.0.5",
     "expo-document-picker": "~13.0.3",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
@@ -42,8 +43,10 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
+    "leaflet": "^1.9.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-native": "0.76.9",
     "react-native-document-picker": "^9.3.1",
     "react-native-elements": "^3.4.3",
