--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "^3.5.2",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.8.4",
